<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/admin_page_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/intro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/services"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="onVeiwServiceClick"
            android:text="@string/view_services"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/add_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="onAddServiceClick"
            android:text="@string/add_new_service"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/edit_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="onEditServiceClick"
            android:text="@string/edit_service"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accounts"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/view_costumers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="onVeiwCostumersClick"
            android:text="@string/view_costumers"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/view_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="onVeiwEmployeesClick"
            android:text="@string/view_employees"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="onEditAccountClick"
            android:text="@string/edit_costumer_employee_account"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>