<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="180dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="180dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/please_select_a_role"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="38sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="adminLog"
            android:text="@string/administrator"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="employeeLog"
            android:text="@string/employee"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="costumerLog"
            android:text="@string/customer"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="OnClick" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>